@@ -1,4 +1,4 @@
-# Automatically generated by php-weathermap v0.92
+# Automatically generated by php-weathermap v0.93
 
 BACKGROUND images/fresh.png
 HTMLSTYLE overlib
@@ -8,7 +8,7 @@ FONTDEFINE 100 Vera 10
 KEYFONT 100
 TIMEPOS 846 17 Created: %b %d %Y %H:%M:%S
 
-KEYPOS DEFAULT 9 10 Traffic Load
+KEYPOS DEFAULT 10 11 Traffic Load
 KEYTEXTCOLOR 0 0 0
 KEYBGCOLOR 255 255 255
 BGCOLOR 255 255 255
@@ -44,15 +44,15 @@ NODE node1
 	LABEL Node 1
 	INFOURL http://support.company.net/cacti/graph.php?rra_id=all&local_graph_id=4
 	OVERLIBGRAPH http://support.company.net/cacti/graph_image.php?local_graph_id=4&rra_id=0&graph_nolegend=true&graph_height=100&graph_width=300
-	POSITION 263 90
+	POSITION 260 90
 
 NODE node2
 	LABEL Node 2
-	POSITION 504 202
+	POSITION 510 176
 
 NODE node
 	LABEL NODE 3
-	POSITION 571 435
+	POSITION 510 435
 
 
 # End of NODE section
