@@ -31,7 +31,7 @@ body { 		font-family: Gill Sans, Verdana, sans-serif; margin:0; }
 	padding: 5px; 
 	/* the warning bit we'll show unless the javascript hides it */
 	font-size: 80%;
-	// padding: 5px;
+	/* padding: 5px; */
 	margin: 25px;
 }
 
